Fix margin on mobile #main-content

--- a/styles/main.css
+++ b/styles/main.css
@@ -703,7 +703,8 @@ text-area,.yui-navset li
     -ms-transition:.5s ease-in-out .1s;
     -o-transition:.5s ease-in-out .1s;
     transition:.5s ease-in-out .1s;
-    margin:0 5%;
+    margin-left: 5%;
+    margin-right: 5%;
     padding:0;
   }
   
